# mkbktr

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: mkbktr.hpp
include/mkbktr/: aes.hpp  delta.hpp  keys.hpp  mapped_nca.hpp  mktr_structs.hpp  rsa.hpp
include/mkbktr/util/: log.hpp  mem.hpp  string.hpp  time.hpp
scripts/: generate_nsp.py
src/: aes.cpp  delta.cpp  keys.cpp  mapped_nca.cpp  mkbktr.cpp  rsa.cpp
src/tools/: decrypt_test.cpp  generate_diff.cpp  ivfc_info.cpp  nca_parse.cpp  parse_cnmt.cpp  patch_cnmt.cpp
src/util/: log.cpp  mem.cpp  string.cpp  time.cpp
